force-app/main/default/objects/ExpOMTest2Extension__c/ExpOMTest2Extension__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Do not delete or modify -- used by outcome manager unit tests</description>
    <label>ExpOMTest2Extension</label>
    <nameField>
        <label>ExpOMTest2Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpOMTest2Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>