force-app/main/default/objects/ExpOMTest2Extension__c/fields/Artistic_Skills__c.field-meta.xml
<CustomField>
    <fullName>Artistic_Skills__c</fullName>
    <label>Artistic Skills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>