force-app/main/default/objects/ExpOMTest2Extension__c/fields/Outcome_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome Indicator</label>
    <referenceTo>Outcome_Indicator__c</referenceTo>
    <relationshipLabel>ExpOMTest2Extensions</relationshipLabel>
    <relationshipName>ExpOMTest2Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>