force-app/main/default/objects/ExpOMTest2Extension__c/fields/Paired_Row__c.field-meta.xml
<CustomField>
    <fullName>Paired_Row__c</fullName>
    <label>Paired Row</label>
    <referenceTo>ExpOMTest2__c</referenceTo>
    <relationshipLabel>ExpOMTest2Extensions</relationshipLabel>
    <relationshipName>ExpOMTest2Extensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>